--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -40,9 +40,14 @@
         </div>
 
         <!-- Mars Hemispheres --> -->
-        <div class="container">
-            <h3>{{hemisphere_img_urls}}</h3>
-        </div> -->
+        <div class="row" id="mars-hemisphere">
+            <h2 class="text-center"> Mars Hemisphere </h2>
+            <p>{{dict['Mars_Hemispheres_urls']}}</p>
+            <img src="{{dict.Mars_Hemispheres_urls[0]}}">
+            <img src="{{dict.Mars_Hemispheres_urls[1]}}">
+            <img src="{{dict.Mars_Hemispheres_urls[2]}}">
+            <img src="{{dict.Mars_Hemispheres_urls[3]}}">
+        </div>
 
     </div>
 </body>
